--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -42,5 +42,9 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-jose</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.bramp.ffmpeg</groupId>
+            <artifactId>ffmpeg</artifactId>
+        </dependency>
     </dependencies>
 </project>
