--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
 		<spring-cloud-commons.version>4.1.2</spring-cloud-commons.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>net.logstash.logback</groupId>
@@ -144,7 +145,11 @@
 				<version>${spring-cloud-commons.version}</version>
 			</dependency>
 
-
+			<dependency>
+				<groupId>net.bramp.ffmpeg</groupId>
+				<artifactId>ffmpeg</artifactId>
+				<version>0.8.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
