--- a/config-server/src/main/resources/bootstrap.yml
+++ b/config-server/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
         git:
           uri: https://github.com/sonld36/tutor-config-repository
           username: sonld36
-          password: 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
+          password: ${PASSWORD_GITHUB}
           default-label: master
         bootstrap: true
   security:
