--- a/course-service/pom.xml
+++ b/course-service/pom.xml
@@ -100,5 +100,10 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
