--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -9,6 +9,7 @@ services:
       - "./docker-logs:/workspace/config-server/logs"
     environment:
       - "JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5007 -Xms128m -Xmx256m"
+      - "PASSWORD_GITHUB=${PASSWORD_GITHUB}"
     networks:
       - ${GLOBAL_NETWORK:-services}
   api-gateway:
@@ -28,6 +29,7 @@ services:
         - "SPRING_CLOUD_CONFIG_URI=http://config-server:8888"
         - "SERVER_PORT=8080"
         - "EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE=http://discovery-server:8761/eureka"
+        - "PASSWORD_CONFIG_SERVER=${PASSWORD_CONFIG_SERVER}"
     networks:
         - ${GLOBAL_NETWORK:-services}
 
