--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<module>shared</module>
 		<module>discovery-sever</module>
 		<module>api-gateway</module>
+		<module>payment-service</module>
 	</modules>
 	<properties>
 		<java.version>17</java.version>
@@ -42,6 +43,8 @@
 		<oauth2-client.version>6.2.3</oauth2-client.version>
 		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
 		<spring-cloud-commons.version>4.1.2</spring-cloud-commons.version>
+
+		<collection-utils.version>4.0</collection-utils.version>
 	</properties>
 
 	<dependencies>
@@ -150,6 +153,13 @@
 				<artifactId>ffmpeg</artifactId>
 				<version>0.8.0</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-collections4</artifactId>
+				<version>${collection-utils.version}</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
