--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -14,6 +14,7 @@
     <url>http://maven.apache.org</url>
     <modules>
         <module>dto</module>
+        <module>client-api</module>
     </modules>
 
     <properties>
