--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>app-config-data</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.microservices.projectfinal</groupId>
+            <artifactId>common-utils</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
