--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -2,3 +2,4 @@ KEYCLOAK_VERSION=24.0.3
 GROUP_ID=com.microservices.projectfinal
 GLOBAL_NETWORK=application
 SERVICE_VERSION=0.0.1-SNAPSHOT
+KAFKA_VERSION=7.3.0
