--- a/course-service/pom.xml
+++ b/course-service/pom.xml
@@ -34,6 +34,10 @@
             <groupId>com.microservices.projectfinal</groupId>
             <artifactId>client-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.microservices.projectfinal</groupId>
+            <artifactId>kafka-consumer</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -94,6 +98,16 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>connect-json</artifactId>
         </dependency>
 
     </dependencies>
