--- a/shared/kafka/kafka-consumer/pom.xml
+++ b/shared/kafka/kafka-consumer/pom.xml
@@ -3,23 +3,29 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.microservices.projectfinal</groupId>
-        <artifactId>tutor-system</artifactId>
+        <artifactId>shared</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>shared</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>kafka-consumer</artifactId>
+    <packaging>jar</packaging>
 
-    <name>shared</name>
+    <name>kafka-consumer</name>
     <url>http://maven.apache.org</url>
-    <modules>
-        <module>dto</module>
-        <module>client-api</module>
-        <module>kafka</module>
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+    </dependencies>
 </project>
