--- a/shared/kafka/kafka-model/pom.xml
+++ b/shared/kafka/kafka-model/pom.xml
@@ -3,23 +3,27 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.microservices.projectfinal</groupId>
-        <artifactId>tutor-system</artifactId>
+        <artifactId>shared</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>shared</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>kafka-model</artifactId>
+    <packaging>jar</packaging>
 
-    <name>shared</name>
+    <name>kafka-model</name>
     <url>http://maven.apache.org</url>
-    <modules>
-        <module>dto</module>
-        <module>client-api</module>
-        <module>kafka</module>
-    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
