--- a/shared/kafka/pom.xml
+++ b/shared/kafka/pom.xml
@@ -3,23 +3,23 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.microservices.projectfinal</groupId>
-        <artifactId>tutor-system</artifactId>
+        <artifactId>shared</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>shared</artifactId>
+    <artifactId>kafka</artifactId>
     <packaging>pom</packaging>
 
-    <name>shared</name>
+    <name>kafka</name>
     <url>http://maven.apache.org</url>
+
     <modules>
-        <module>dto</module>
-        <module>client-api</module>
-        <module>kafka</module>
+        <module>kafka-consumer</module>
+        <module>kafka-producer</module>
+        <module>kafka-admin</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
 </project>
