--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -3,3 +3,5 @@ GROUP_ID=com.microservices.projectfinal
 GLOBAL_NETWORK=application
 SERVICE_VERSION=0.0.1-SNAPSHOT
 KAFKA_VERSION=7.3.0
+PASSWORD_GITHUB=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
+PASSWORD_CONFIG_SERVER=allIAO27
