--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 		<spring.security.web.version>6.2.4</spring.security.web.version>
 		<auth0.jwt.version>3.11.0</auth0.jwt.version>
 		<auth0.jwks.version>0.15.0</auth0.jwks.version>
+		<storm-websocket.version>2.3.4</storm-websocket.version>
 
 		<collection-utils.version>4.0</collection-utils.version>
 	</properties>
