--- a/signal-service/src/main/resources/bootstrap.yml
+++ b/signal-service/src/main/resources/bootstrap.yml
@@ -5,6 +5,6 @@ spring:
     active: signal_service
   cloud:
     config:
-      name: config-client
+      name: config-client, signal-service, config-redis
       username: sonld36
       password: ${PASSWORD_CONFIG_SERVER}
