--- a/shared/client-api/pom.xml
+++ b/shared/client-api/pom.xml
@@ -5,6 +5,7 @@
         <groupId>com.microservices.projectfinal</groupId>
         <artifactId>tutor-system</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>client-api</artifactId>
