--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PASSWORD_GITHUB=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
 PASSWORD_CONFIG_SERVER=allIAO27
 BASIC_AUTH_USERNAME=tutormicroservices
 BASIC_AUTH_PASSWORD=allIAO27
+MINIO_ACCESS_KEY=s0gQ1gAySuJo1KIIV4ge
+MINIO_SECRET_KEY=QHPagxAdHSOe5glQQNNdVmNbp2aFJos1yLM1TuWA
