--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -91,5 +91,10 @@
             <artifactId>minio</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
