--- a/course-service/src/main/resources/application.yml
+++ b/course-service/src/main/resources/application.yml
@@ -4,3 +4,5 @@ spring:
       enabled: true
       max-file-size: 1024MB
       max-request-size: 1024MB
+MINIO_ACCESS_KEY: QWBfiGKTIxn8ADIIJoKj
+MINIO_SECRET_KEY: lAQkhF4vK8hH8avxiWlIu3JIhW4c5JGx1rKThDqZ
