--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PASSWORD_GITHUB=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
+PASSWORD_GITHUB=${PASSWORD_GITHUB}
 PASSWORD_CONFIG_SERVER=allIAO27
 BASIC_AUTH_USERNAME=tutormicroservices
 BASIC_AUTH_PASSWORD=allIAO27
