--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -32,7 +32,7 @@ services:
         - "PASSWORD_CONFIG_SERVER=${PASSWORD_CONFIG_SERVER}"
         - "API_HOST=host.docker.internal"
     extra_hosts:
-      - "Admin-PC:host-gateway"
+      - "SonLD:host-gateway"
       - "localhost:host-gateway"
     networks:
         - ${GLOBAL_NETWORK:-services}
