--- a/signal-service/pom.xml
+++ b/signal-service/pom.xml
@@ -26,8 +26,10 @@
             <groupId>com.microservices.projectfinal</groupId>
             <artifactId>redis</artifactId>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.microservices.projectfinal</groupId>
+            <artifactId>common-utils</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
